--- a/client/src/components/Footer/Footer.module.scss
+++ b/client/src/components/Footer/Footer.module.scss
@@ -15,6 +15,10 @@
   align-items: center;
   justify-items: center;
 
+  @media only screen and (max-width: $bp-medium) {
+    grid-template-rows: 1fr 1fr 0.5fr ;
+  }
+
   &__listOfIcons {
     list-style: none;
 
@@ -22,7 +26,10 @@
     grid-row: 1 / 2;
 
     display: flex;
-
+    @media only screen and (max-width: $bp-medium) {
+      grid-column: 1 / -1;
+      grid-row: 1 / 2;
+    }
 
     li:hover img {
       transform: translateY(-4px);
@@ -42,6 +49,11 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+
+    @media only screen and (max-width: $bp-medium) {
+      grid-column: 1 / -1;
+      grid-row: 2 / 3;
+    }
     li {
       font-size: 1.5rem;
       font-weight: 400;
@@ -53,9 +65,14 @@
     grid-column: 1/ 3;
     grid-row: 2 / 3;
 
+
     display: flex;
     flex-direction: column;
     align-items: center;
+    @media only screen and (max-width: $bp-medium) {
+      grid-column: 1 / -1;
+      grid-row: 3 / 4;
+    }
     p{
       font-size: 1.3rem;
     }
